# dadosfinanceiros.com.br

./: .env.example  .gitignore  .pre-commit-config.yaml  AUTHENTICATION_FIX.md  B3_INTEGRATION_GUIDE.md  CLOUDFLARE_DEPLOYMENT_GUIDE.md  CSRF_DEBUGGING.md  Dockerfile  Makefile  PRODUCTION_DEPLOYMENT.md  QUICK_DEPLOYMENT_STEPS.md  README-TERRAFORM.md  README.md  SUBSCRIPTION_SYSTEM.md  TEST_DOCUMENTATION.md  TEST_IMPLEMENTATION_SUMMARY.md  UNIFIED_API_GUIDE.md  VERSIONING_SUMMARY.md  WORKER_VERSIONING_GUIDE.md  compose.yaml  create_docs.py  deploy_production.py  docker-compose.yml  docker-entrypoint.sh  dump.rdb  env.b3.template  local.http  manage.py  nginx.conf.sample  provider_routes.http  pyproject.toml  requirements.txt  run_comprehensive_tests.py  shell_startup.py  sitemaps.py  test_b3_proxy.py  test_comprehensive_api.py  test_new_api.py  test_structure_verification.py  test_unified_api.py  (+1 more)
.github/: repository-secrets-setup.md
docs/: ASGI_COROUTINE_FIX_SUMMARY.md  AUTHENTICATION_FIX.md  B3_IMPLEMENTATION_SUMMARY.md  COMPLETE_CLOUDFLARE_CACHE_GUIDE.md  COMPREHENSIVE_RATE_LIMITING_TEST_SUITE_SUMMARY.md  CSRF_DEBUGGING.md  FUTURE_PLAN.md  NEW_API_IMPLEMENTATION.md  PAYMENT_TESTS_FINAL_STATUS.md  PAYMENT_TESTS_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  RATE_LIMITING_IMPLEMENTATION.md  RATE_LIMITING_TEST_SUMMARY.md  README-TERRAFORM.md  STRIPE_SETUP.md  SUBSCRIPTION_SYSTEM.md  TEST_DOCUMENTATION.md  TEST_SUITE_README.md  WHITENOISE_SETUP.md  WORKER_TEST_RESULTS.md  ip-automation.md  terraform-setup.md
frontend/: .dockerignore  .env.example  .env.production  README.md  eslint.config.js  index.html  package.json  vite.config.ts
proxy_app/: __init__.py  apps.py  config.py  consumers.py  providers.py  proxy.py  routing.py  test_comprehensive.py  test_edge_cases.py  test_indices_economy.py  tests.py  urls.py  views.py  views_new.py
proxy_project/: asgi.py  settings.py  test_runner.py  urls.py
templates/: base.html  subscription_success.html
terraform/: .gitignore  main.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  conftest.py  factories.py  factories.py.backup  test_authentication_integration.py  test_base_views.py  test_e2e_rate_limiting.py  test_models.py  test_payments_chaos.py  test_payments_integration.py  test_permissions.py  test_proxy_comprehensive.py  test_proxy_functionality.py  test_rate_limiting.py  test_views.py  (+6 more)
(+115 files in other folders)
